# copy-finder

./: .gitignore  CMakeLists.txt  CopyFinder.pro  hashingthread.cpp  hashingthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resultdialog.cpp  resultdialog.h  resultdialog.ui
reader/: reader.cpp  reader.h
tests/: generator.py
tests/absolute random/: generator.py
tests/links/hard/: to-c-kekos
tests/links/sym/: a-sym-sym  to-kekos  to-kekos-c
tests/many big different/: generator.py
tests/many small same/: generator.py
